# RockchipPlayer

./: CMakeLists.txt  main.cpp  vcpkg.json
